AiPS1/Naloga2/log/r55/compile.out
Naloga2.java:1105: error: class, interface, or enum expected
}import java.util.Scanner;
 ^
1 error
